[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Pieces/BlackBishop.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Bishop.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5243, 14.4157 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13, 13 )

[node name="Bishop" type="KinematicBody2D" groups=[
"BlackPiece",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.117989, 0.943874 )
shape = SubResource( 2 )

[node name="TopRight" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area1" type="Area2D" parent="TopRight/RayCast1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast1/Area1"]
position = Vector2( 31.5, -31.5 )
shape = SubResource( 3 )

[node name="RayCast2" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 60, -60 )

[node name="Area2" type="Area2D" parent="TopRight/RayCast2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast2/Area2"]
position = Vector2( 63, -63 )
shape = SubResource( 4 )

[node name="RayCast3" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 90, -90 )

[node name="Area3" type="Area2D" parent="TopRight/RayCast3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast3/Area3"]
position = Vector2( 95, -95 )
shape = SubResource( 4 )

[node name="RayCast4" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 120, -120 )

[node name="Area4" type="Area2D" parent="TopRight/RayCast4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast4/Area4"]
position = Vector2( 128, -128 )
shape = SubResource( 4 )

[node name="RayCast5" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 150, -150 )

[node name="Area5" type="Area2D" parent="TopRight/RayCast5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast5/Area5"]
position = Vector2( 159, -159 )
shape = SubResource( 4 )

[node name="RayCast6" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 190, -190 )

[node name="Area6" type="Area2D" parent="TopRight/RayCast6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast6/Area6"]
position = Vector2( 191.362, -191.362 )
shape = SubResource( 4 )

[node name="RayCast7" type="RayCast2D" parent="TopRight"]
enabled = true
cast_to = Vector2( 220, -220 )

[node name="Area7" type="Area2D" parent="TopRight/RayCast7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight/RayCast7/Area7"]
position = Vector2( 222, -222 )
shape = SubResource( 4 )

[node name="BottomRight" type="Node2D" parent="."]
rotation = 1.5708

[node name="RayCast1" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area11" type="Area2D" parent="BottomRight/RayCast1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast1/Area11"]
position = Vector2( 31.5, -31.5 )
shape = SubResource( 3 )

[node name="RayCast2" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 60, -60 )

[node name="Area12" type="Area2D" parent="BottomRight/RayCast2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast2/Area12"]
position = Vector2( 63, -63 )
shape = SubResource( 4 )

[node name="RayCast3" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 90, -90 )

[node name="Area13" type="Area2D" parent="BottomRight/RayCast3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast3/Area13"]
position = Vector2( 95, -95 )
shape = SubResource( 4 )

[node name="RayCast4" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 120, -120 )

[node name="Area14" type="Area2D" parent="BottomRight/RayCast4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast4/Area14"]
position = Vector2( 128, -128 )
shape = SubResource( 4 )

[node name="RayCast5" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 150, -150 )

[node name="Area15" type="Area2D" parent="BottomRight/RayCast5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast5/Area15"]
position = Vector2( 159, -159 )
shape = SubResource( 4 )

[node name="RayCast6" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 190, -190 )

[node name="Area16" type="Area2D" parent="BottomRight/RayCast6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast6/Area16"]
position = Vector2( 191.362, -191.362 )
shape = SubResource( 4 )

[node name="RayCast7" type="RayCast2D" parent="BottomRight"]
enabled = true
cast_to = Vector2( 220, -220 )

[node name="Area17" type="Area2D" parent="BottomRight/RayCast7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight/RayCast7/Area17"]
position = Vector2( 222, -222 )
shape = SubResource( 4 )

[node name="BottomLeft" type="Node2D" parent="."]
rotation = 3.14159

[node name="RayCast1" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area21" type="Area2D" parent="BottomLeft/RayCast1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast1/Area21"]
position = Vector2( 31.5, -31.5 )
shape = SubResource( 3 )

[node name="RayCast2" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 60, -60 )

[node name="Area22" type="Area2D" parent="BottomLeft/RayCast2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast2/Area22"]
position = Vector2( 63, -63 )
shape = SubResource( 4 )

[node name="RayCast3" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 90, -90 )

[node name="Area23" type="Area2D" parent="BottomLeft/RayCast3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast3/Area23"]
position = Vector2( 95, -95 )
shape = SubResource( 4 )

[node name="RayCast4" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 120, -120 )

[node name="Area24" type="Area2D" parent="BottomLeft/RayCast4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast4/Area24"]
position = Vector2( 128, -128 )
shape = SubResource( 4 )

[node name="RayCast5" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 150, -150 )

[node name="Area25" type="Area2D" parent="BottomLeft/RayCast5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast5/Area25"]
position = Vector2( 159, -159 )
shape = SubResource( 4 )

[node name="RayCast6" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 190, -190 )

[node name="Area26" type="Area2D" parent="BottomLeft/RayCast6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast6/Area26"]
position = Vector2( 191.362, -191.362 )
shape = SubResource( 4 )

[node name="RayCast7" type="RayCast2D" parent="BottomLeft"]
enabled = true
cast_to = Vector2( 220, -220 )

[node name="Area27" type="Area2D" parent="BottomLeft/RayCast7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft/RayCast7/Area27"]
position = Vector2( 222, -222 )
shape = SubResource( 4 )

[node name="TopLeft" type="Node2D" parent="."]
rotation = 4.71239

[node name="RayCast1" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area31" type="Area2D" parent="TopLeft/RayCast1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast1/Area31"]
position = Vector2( 31.5, -31.5 )
shape = SubResource( 3 )

[node name="RayCast2" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 60, -60 )

[node name="Area32" type="Area2D" parent="TopLeft/RayCast2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast2/Area32"]
position = Vector2( 63, -63 )
shape = SubResource( 4 )

[node name="RayCast3" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 90, -90 )

[node name="Area33" type="Area2D" parent="TopLeft/RayCast3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast3/Area33"]
position = Vector2( 95, -95 )
shape = SubResource( 4 )

[node name="RayCast4" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 120, -120 )

[node name="Area34" type="Area2D" parent="TopLeft/RayCast4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast4/Area34"]
position = Vector2( 128, -128 )
shape = SubResource( 4 )

[node name="RayCast5" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 150, -150 )

[node name="Area35" type="Area2D" parent="TopLeft/RayCast5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast5/Area35"]
position = Vector2( 159, -159 )
shape = SubResource( 4 )

[node name="RayCast6" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 190, -190 )

[node name="Area36" type="Area2D" parent="TopLeft/RayCast6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast6/Area36"]
position = Vector2( 191.362, -191.362 )
shape = SubResource( 4 )

[node name="RayCast7" type="RayCast2D" parent="TopLeft"]
enabled = true
cast_to = Vector2( 220, -220 )

[node name="Area37" type="Area2D" parent="TopLeft/RayCast7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft/RayCast7/Area37"]
position = Vector2( 222, -222 )
shape = SubResource( 4 )

[node name="le_kill" type="RayCast2D" parent="."]
position = Vector2( -0.166855, -13.0147 )
enabled = true
cast_to = Vector2( 0, 20 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast1/Area1" to="." method="_on_Area1_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast1/Area1" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast2/Area2" to="." method="_on_Area2_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast2/Area2" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast3/Area3" to="." method="_on_Area3_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast3/Area3" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast4/Area4" to="." method="_on_Area4_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast4/Area4" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast5/Area5" to="." method="_on_Area5_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast5/Area5" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast6/Area6" to="." method="_on_Area6_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast6/Area6" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopRight/RayCast7/Area7" to="." method="_on_Area7_mouse_entered"]
[connection signal="mouse_exited" from="TopRight/RayCast7/Area7" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast1/Area11" to="." method="_on_Area11_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast1/Area11" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast2/Area12" to="." method="_on_Area12_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast2/Area12" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast3/Area13" to="." method="_on_Area13_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast3/Area13" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast4/Area14" to="." method="_on_Area14_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast4/Area14" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast5/Area15" to="." method="_on_Area15_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast5/Area15" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast6/Area16" to="." method="_on_Area16_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast6/Area16" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomRight/RayCast7/Area17" to="." method="_on_Area17_mouse_entered"]
[connection signal="mouse_exited" from="BottomRight/RayCast7/Area17" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast1/Area21" to="." method="_on_Area21_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast1/Area21" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast2/Area22" to="." method="_on_Area22_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast2/Area22" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast3/Area23" to="." method="_on_Area23_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast3/Area23" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast4/Area24" to="." method="_on_Area24_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast4/Area24" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast5/Area25" to="." method="_on_Area25_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast5/Area25" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast6/Area26" to="." method="_on_Area26_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast6/Area26" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="BottomLeft/RayCast7/Area27" to="." method="_on_Area27_mouse_entered"]
[connection signal="mouse_exited" from="BottomLeft/RayCast7/Area27" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopLeft/RayCast1/Area31" to="." method="_on_Area31_mouse_entered"]
[connection signal="mouse_exited" from="TopLeft/RayCast1/Area31" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopLeft/RayCast2/Area32" to="." method="_on_Area32_mouse_entered"]
[connection signal="mouse_exited" from="TopLeft/RayCast2/Area32" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopLeft/RayCast3/Area33" to="." method="_on_Area33_mouse_entered"]
[connection signal="mouse_exited" from="TopLeft/RayCast3/Area33" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopLeft/RayCast4/Area34" to="." method="_on_Area34_mouse_entered"]
[connection signal="mouse_exited" from="TopLeft/RayCast4/Area34" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopLeft/RayCast5/Area35" to="." method="_on_Area35_mouse_entered"]
[connection signal="mouse_entered" from="TopLeft/RayCast6/Area36" to="." method="_on_Area36_mouse_entered"]
[connection signal="mouse_exited" from="TopLeft/RayCast6/Area36" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="TopLeft/RayCast7/Area37" to="." method="_on_Area37_mouse_entered"]
[connection signal="mouse_exited" from="TopLeft/RayCast7/Area37" to="." method="mouse_exited"]
